# forward-secure-cloud-storage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client_operator.h  client_operator_multi_pkw.h  cloud_communicator.h  flat_dir_id_provider.h  flat_id_provider.h  gcs_cloud_communicator.h  hierarch_id_provider.h  id.h  id_provider.h  interactive_client.cpp  interactive_client.h  vcpkg.json
benchmarks/: CMakeLists.txt  average_csvs.py  benchmark_client_operator.h  benchmark_git_hist.cpp  benchmark_local_client.h  benchmark_local_hierarch_client.h  benchmark_local_hierarch_multi_pkw_client.h  benchmarks_simple.cpp  extract_dir_deletes_github.py  github_history_extract_command.txt  make_plots.py  mock_cloud_communicator.h  plot_github.py  visualize_pprf_key.py
benchmarks/data/: large.txt  small.txt
benchmarks/resources/: guava_git_hist.txt  guava_git_hist_with_dir_deletes.txt  ohmyzsh_git_hist.txt  ohmyzsh_git_hist_with_dir_deletes.txt  react_git_hist.txt  react_git_hist_with_dir_deletes.txt
lib-puncturable-key-wrapping-cpp/: CMakeLists.txt
lib-puncturable-key-wrapping-cpp/pkw/: CMakeLists.txt  secure_byte_buffer.h
lib-puncturable-key-wrapping-cpp/pkw/pkw/: hpprf_aead_pkw.cpp  hpprf_aead_pkw.h  naive_pkw.cpp  naive_pkw.h  pkw.h  pprf_aead_pkw.cpp  pprf_aead_pkw.h
lib-puncturable-key-wrapping-cpp/pkw/pkw/helpers/: password_encrypt.cpp  password_encrypt.h
lib-puncturable-key-wrapping-cpp/pkw/pprf/: ggm_hpprf.cpp  ggm_hpprf.h  ggm_pprf.cpp  ggm_pprf.h  ggm_pprf_key.cpp  ggm_pprf_key.h  pprf_key_serializer.cpp  pprf_key_serializer.h  secret_root.h
lib-puncturable-key-wrapping-cpp/puncturable-key-wrapping-cpp-tests/: CMakeLists.txt  GGM_HPPRFTest.cpp  GGM_PPRFTest.cpp  HPPRF_AEAD_PKWTest.cpp  NaivePKWTest.cpp  PPRF_AEAD_PKWTest.cpp  SerializationSizeBenchmarksPPRF.cpp  hkdf_derivation.py
tests/: CMakeLists.txt  client_operator_hierarch_multi_test.cpp  client_operator_hierarch_test.cpp  client_operator_test.cpp  flat_dir_id_provider_test.cpp  gcs_test.cpp  hierarch_id_provider_test.cpp
tests/resources/: lorem_ipsum.txt
tests/util/: tag_util_test.cpp
util/: file_util.cpp  file_util.h  tag_util.cpp  tag_util.h
